--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 <body>
    <main>
     <div class="container">
-        <h1>
-            Counter
-        </h1>
         <span id="value">0</span>
         <div class="buttonContainer">
             <button class="btn decrease">-</button>
@@ -31,13 +28,14 @@
             <button class="btn load">Load</button>
         </div>
         <div class="modifyCount">
-            <button class="btn minusTen">-10</button>
             <button class="btn minusFifty">-50</button>
+            <button class="btn minusTen">-10</button>
             <button class="btn reset">0</button>
             <button class="btn plusTen">+10</button>
             <button class="btn plusFifty">+50</button>
         </div>
     </div>
+    <div class="savedAlert"></div>
    </main>
     
     <script src="scripts.js"></script>
